examples/example-workload/ingressroute/06-multiple-roots/delegate.ingressroute.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata: 
  name: main
spec: 
  routes: 
    - match: /
      services: 
        - name: s2
          port: 80
