examples/example-workload/ingressroute/06-multiple-roots/root.ingressroute.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata: 
  name: multiple-root
spec:
  virtualhost:
    fqdn: bar.com
  routes: 
    - match: /  # delegate the subpath, `/` to the IngressRoute object in the marketing namespace with the name `main`
      delegate:
        name: main
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata: 
  name: multiple-root-www
spec:
  virtualhost:
    fqdn: www.bar.com
  routes: 
    - match: /  # delegate the subpath, `/` to the IngressRoute object in the marketing namespace with the name `main`
      delegate:
        name: main
